nav fixed on small screen size

--- a/public/scss/_variable.scss
+++ b/public/scss/_variable.scss
@@ -20,3 +20,4 @@ $modal-bg: rgba(0, 0, 0, 0.808);
 $border-color-lite: #32323d3d;
 $grey: #a4a4a4;
 $input-box-dark: #09090D;
+$nav-bg: #040509;
